--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ flask-bcrypt = "*"
 flask-jwt-extended = "*"
 python-dotenv = "*"
 bleach = "*"
+requests = "*"
+"backports.zoneinfo" = "*"
 
 [dev-packages]
 
