changed architechture a bit, hope it works

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ python-dotenv = "*"
 bleach = "*"
 requests = "*"
 "backports.zoneinfo" = "*"
+routeros_api = "*"
+apscheduler = "*"
 
 [dev-packages]
 
